added link to open code on Git hub

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         </div>
       </div>
       <div class="coder">
-        <a href="">Open-source code</a> <span> by Diana</span>
+        <a href="https://github.com/dianaaiandor/weather_app"
+          >Open-source code</a
+        >
+        <span> by Diana</span>
       </div>
     </div>
     <script src="index.js"></script>
