--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
         <span> by Diana</span>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
