--- a/index.html
+++ b/index.html
@@ -20,22 +20,18 @@
         <h1 for="city">Current weather in <span id="default-city"> </span></h1>
 
         <div class="row">
-          <div class="col-5">
+          <div class="col">
             <form id="search-form">
-              <div>
-                <input
-                  type="text"
-                  name="city"
-                  placeholder="Enter your city"
-                  id="user-city"
-                />
-                <input type="submit" value="Search" />
-              </div>
+              <input
+                type="text"
+                name="city"
+                placeholder="Enter your city"
+                id="user-city"
+              />
+              <input type="submit" value="Search" />
             </form>
           </div>
-          <div class="col my-location">
-            <button id="my-location">My location</button>
-          </div>
+          <div class="col"><button id="my-location">My location</button></div>
         </div>
 
         <div class="row">
