relevant icon from api added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
           </div>
           <div class="col-4">
-            <img src="images/sun.svg" alt="sun" />
+            <img src="images/sun.svg" alt="sun" id="icon" />
           </div>
           <div class="col-4 temperature">
             <p>
