made unit conversion

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="col">
             <form id="search-form">
               <input
-                type="text"
+                type="search"
                 name="city"
                 placeholder="Enter your city"
                 id="user-city"
@@ -70,7 +70,7 @@
           </div>
           <div class="col-2">
             <p>Aug 8</p>
-            <img src="images/sun.svg" alt="sun" width="30px" />
+            <img src="images/10d.png" alt="sun" width="30px" />
             <p>15℃</p>
           </div>
           <div class="col-2">
@@ -80,7 +80,7 @@
           </div>
           <div class="col-2">
             <p>Aug 10</p>
-            <img src="images/rain.svg" alt="sun" width="30px" />
+            <img src="images/03d.png" alt="sun" width="30px" />
             <p>10℃</p>
           </div>
           <div class="col-2">
