changed height of main icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col"><button id="my-location">My location</button></div>
         </div>
 
-        <div class="row">
+        <div class="row block-main-parameters">
           <div class="col-4 weather-parameters">
             <p>
               <strong> <span id="description"> Party cloudy </span> </strong>
