--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 for="city">Current weather in <span id="default-city"> </span></h1>
 
         <div class="row">
-          <div class="col">
+          <div class="col-5">
             <form id="search-form">
               <input
                 type="search"
@@ -28,10 +28,23 @@
                 placeholder="Enter your city"
                 id="user-city"
               />
-              <input type="submit" value="Search" />
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-search"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                  />
+                </svg>
+              </button>
             </form>
           </div>
-          <div class="col"><button id="my-location">My location</button></div>
+          <div class="col-4"><button id="my-location">My location</button></div>
         </div>
 
         <div class="row block-main-parameters">
