changed color of button, reduce width to 40%

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 for="city">Current weather in <span id="default-city"> </span></h1>
 
         <div class="row">
-          <div class="col-5">
+          <div class="col">
             <form id="search-form">
               <input
                 type="search"
@@ -44,7 +44,7 @@
               </button>
             </form>
           </div>
-          <div class="col-4"><button id="my-location">My location</button></div>
+          <div class="col"><button id="my-location">My location</button></div>
         </div>
 
         <div class="row block-main-parameters">
