--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>
               <span class="current-temperature"> 20 </span>
               <span class="degree">
-                <a href="" id="celsius"> ℃ </a> |
+                <a href="" id="celsius" class="active"> ℃ </a> |
                 <a href="" id="fahrenheit"> ℉ </a>
               </span>
             </p>
