--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Monday, August 29, 10:30</h2>
         <h1 for="city">Current weather in <span id="default-city"> </span></h1>
 
-        <div class="row">
+        <div class="row row-cols-auto">
           <div class="col">
             <form id="search-form">
               <input
