weather icons added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="col-2">
             <p>Aug 8</p>
-            <img src="images/10d.png" alt="sun" width="30px" />
+            <img src="images/50d.svg" alt="sun" width="30px" />
             <p>15℃</p>
           </div>
           <div class="col-2">
@@ -93,7 +93,7 @@
           </div>
           <div class="col-2">
             <p>Aug 10</p>
-            <img src="images/03d.png" alt="sun" width="30px" />
+            <img src="images/13d.svg" alt="sun" width="30px" />
             <p>10℃</p>
           </div>
           <div class="col-2">
