--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="conteiner">
       <div class="weather-app">
         <h2>Monday, August 29, 10:30</h2>
-        <h1 for="city">Current weather in <span id="default-city"> </span></h1>
+        <h1 for="city">Current weather<span id="default-city"> </span></h1>
 
         <div class="row row-cols-auto">
           <div class="col">
@@ -34,7 +34,7 @@
                 placeholder="Enter your city"
                 id="user-city"
               />
-              <button>
+              <button class="search-button">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -50,7 +50,9 @@
               </button>
             </form>
           </div>
-          <div class="col"><button id="my-location">My location</button></div>
+          <div class="col my-location">
+            <button id="my-location">My location</button>
+          </div>
         </div>
 
         <div class="row block-main-parameters">
@@ -77,7 +79,7 @@
                 <a href="" id="fahrenheit">°F</a>
               </span>
             </p>
-            <p class="feeling">Feels like <span id="feeling">18</span>℃</p>
+            <p class="feeling">Feels like <span id="feeling">18</span>°C</p>
           </div>
         </div>
 
