style h1 and add opacity to date forecast

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <input
                 type="search"
                 name="city"
-                placeholder="Enter your city"
+                placeholder="Type your city"
                 id="user-city"
               />
               <button class="search-button">
@@ -85,12 +85,12 @@
 
         <div class="row align-items-start weather-forecast">
           <div class="col-2">
-            <p>Aug 8</p>
+            <p class="date">Aug 8</p>
             <img src="images/sun.svg" alt="sun" width="30px" />
             <p>15℃</p>
           </div>
           <div class="col-2">
-            <p>Aug 8</p>
+            <p class="date">Aug 8</p>
             <img src="images/50d.svg" alt="sun" width="30px" />
             <p>15℃</p>
           </div>
@@ -100,17 +100,17 @@
             <p>11℃</p>
           </div>
           <div class="col-2">
-            <p>Aug 10</p>
+            <p class="date">Aug 10</p>
             <img src="images/13d.svg" alt="sun" width="30px" />
             <p>10℃</p>
           </div>
           <div class="col-2">
-            <p>Aug 11</p>
+            <p class="date">Aug 11</p>
             <img src="images/rain.svg" alt="sun" width="30px" />
             <p>13℃</p>
           </div>
           <div class="col-2">
-            <p>Aug 12</p>
+            <p class="date">Aug 12</p>
             <img src="images/sun.svg" alt="sun" width="30px" />
             <p>15℃</p>
           </div>
