inject forecast HTML to JS and loop it

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   height="16"
                   fill="currentColor"
                   class="bi bi-search"
-                  viewBox="0 0 16 16"
+                  viewbox="0 0 16 16"
                 >
                   <path
                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
@@ -83,39 +83,9 @@
           </div>
         </div>
 
-        <div class="row align-items-start weather-forecast">
-          <div class="col-2">
-            <p class="date">Aug 8</p>
-            <img src="images/sun.svg" alt="sun" width="30px" />
-            <p>15℃</p>
-          </div>
-          <div class="col-2">
-            <p class="date">Aug 8</p>
-            <img src="images/50d.svg" alt="sun" width="30px" />
-            <p>15℃</p>
-          </div>
-          <div class="col-2">
-            <p class="date">Aug 9</p>
-            <img src="images/sun.svg" alt="sun" width="30px" />
-            <p>11℃</p>
-          </div>
-          <div class="col-2">
-            <p class="date">Aug 10</p>
-            <img src="images/13d.svg" alt="sun" width="30px" />
-            <p>10℃</p>
-          </div>
-          <div class="col-2">
-            <p class="date">Aug 11</p>
-            <img src="images/rain.svg" alt="sun" width="30px" />
-            <p>13℃</p>
-          </div>
-          <div class="col-2">
-            <p class="date">Aug 12</p>
-            <img src="images/sun.svg" alt="sun" width="30px" />
-            <p>15℃</p>
-          </div>
-        </div>
+        <div class="weather-forecast" id="weather-forecast"></div>
       </div>
+
       <div class="coder">
         <a href="https://github.com/dianaaiandor/weather_app"
           >Open-source code</a
