--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </p>
           </div>
           <div class="col-4">
-            <img src="images/sun.svg" alt="sun" id="icon" />
+            <img src=" " alt="sun" id="icon" />
           </div>
           <div class="col-4 temperature">
             <p>
