style weather parameters and remove fahrenheit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="conteiner">
       <div class="weather-app">
-        <h2>Monday, August 29, 10:30</h2>
+        <h2></h2>
         <h1 for="city">Current weather <span id="default-city"> </span></h1>
 
         <div class="row row-cols-auto">
@@ -58,14 +58,14 @@
         <div class="row block-main-parameters">
           <div class="col-4 weather-parameters">
             <p>
-              <strong> <span id="description"> Party cloudy </span> </strong>
+              <strong> <span id="description"></span> </strong>
             </p>
-
+            <br />
             <p>
-              wind: <strong> <span id="wind"> 10 </span> m/c</strong>
+              wind: <span> <span id="wind"></span> m/c</span>
             </p>
             <p>
-              humidity: <strong> <span id="humidity"> 50 </span> % </strong>
+              humidity: <span> <span id="humidity"></span> % </span>
             </p>
           </div>
           <div class="col-4">
@@ -73,13 +73,12 @@
           </div>
           <div class="col-4 temperature">
             <p>
-              <span class="current-temperature"> 20 </span>
+              <span class="current-temperature"></span>
               <span class="degree">
-                <a href="" id="celsius" class="active">°C</a> |
-                <a href="" id="fahrenheit">°F</a>
+                <span id="celsius">°C</span>
               </span>
             </p>
-            <p class="feeling">Feels like <span id="feeling">18</span>°C</p>
+            <p class="feeling">Feels like <span id="feeling"></span>°C</p>
           </div>
         </div>
 
