minor punctuation changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <span id="celsius">°C</span>
               </span>
             </p>
-            <p class="feeling">Feels like <span id="feeling"></span>°C</p>
+            <p class="feeling">Feels like: <span id="feeling"></span>°C</p>
           </div>
         </div>
 
